# qlikjwt

./: README.md  pyproject.toml
src/qlikjwt/: __init__.py  qlikjwt.py
