[tool.poetry]
name = "qlikjwt"
version = "1.0.1"
description = "Create JWT tokens from a private key and a payload"
authors = ["David Wales <david.wales@swsphn.com.au>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/swsphn/qlikjwt/"

[tool.poetry.dependencies]
python = ">=3.9.2 <4.0"
typer = "^0.19.2"
PyJWT = "^2.10.1"
cryptography = ">=46.0.1,<49.0.0"


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"

[tool.poetry.scripts]
qlikjwt = 'qlikjwt.qlikjwt:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
